--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>itulo do Site</title>
+    <title>Titulo do Site</title>
 </head>
 <body>
     <main>
         <header>
-            <h1>Titulo do site</h1>
+            <h1>Curso Grátis</h1>
         </header>
         <article>
             <h2>Artigo 002</h2>
             <p>texto Artigo 002</p>
+        </article>
+        <article>
+            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, doloremque praesentium vitae hic culpa ut obcaecati voluptatem nisi illum repudiandae laborum nulla facere esse qui minima quia impedit facilis et.</h2>
         </article>
         
     </main>
